syntax="proto3";

message Profile {
  //int64 id = 1;
  //string project_id = 2;

  int32 threads = 7;
  //string schema = 8;

  oneof connection {
    JDBC redshift = 3;
    JDBC postgres = 8;
    BigQuery bigquery = 4;
    Snowflake snowflake = 5;
  }
}

message JDBC {
  string host_name = 2;
  int64 port = 3;
  string user_name = 4;
  string password = 5;
  string database_name = 6;
}

message Snowflake {
  string account_id = 2;
  string user_name = 3;
  string password = 4;
  string role = 5;
  string database_name = 6;
  string warehouse = 7;
}

message BigQuery {
  string project_id = 1;
  message Credentials {
    string type = 1;
    string project_id = 2;
    string private_key_id = 3;
    string private_key = 4;
    string client_email = 5;
    string client_id = 6;
    string auth_uri = 7;
    string token_uri = 8;
    string auth_provider_x509_cert_url = 9;
    string client_x509_cert_url = 10;
  }
  Credentials credentials = 3;
}
